add go run experiment

--- a/.github/workflows/run-go.yml
+++ b/.github/workflows/run-go.yml
@@ -5,8 +5,10 @@ jobs:
   experiment:
     runs-on: ubuntu-latest
     steps:
+      - name: "Go Version"
+        run: sudo go version
       - name: "Install Go"
-        run: sudo apt install -y golang
+        run: sudo apt update && sudoapt install -y golang
       - name: "Execute Go Program"
         shell: go run {0}
         run: |
