add go run experiment

--- a/.github/workflows/run-go.yml
+++ b/.github/workflows/run-go.yml
@@ -10,6 +10,7 @@ jobs:
       - name: "Execute Go Program"
         env:
           GO111MODULE: off
+          GOPATH: "."
         shell: go run {0}
         run: |
           package main
