add go run experiment

--- a/.github/workflows/run-go.yml
+++ b/.github/workflows/run-go.yml
@@ -7,6 +7,8 @@ jobs:
     steps:
       - name: "Go Version"
         run: sudo go version
+      - name: "Go Env"
+        run: sudo go env
       - name: "Execute Go Program"
         env:
           GO111MODULE: off
