--- a/.github/workflows/run-go.yml
+++ b/.github/workflows/run-go.yml
@@ -5,18 +5,21 @@ jobs:
   experiment:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
       - name: "Go Version"
         run: sudo go version
       - name: "Go Env"
         run: sudo go env
+      - name: "Go Env"
+        run: sudo go mod init
       - name: "Execute Go Program"
-        env:
-          GO111MODULE: off
-          GOPATH: "."
         shell: go run {0}
         run: |
           package main
+
           import "fmt"
+
           func main() {
               fmt.Println("hello world")
           }
