--- a/.github/workflows/run-go.yml
+++ b/.github/workflows/run-go.yml
@@ -15,13 +15,10 @@ jobs:
         run: ls -lah /home/runner/work/
       - name: "Go Env"
         run: sudo go env
-      - uses: actions/setup-go@v5
-        with:
-          go-version: "1.24"
       - name: "Execute Go Program"
         env:
           GO111MODULE: off
-          GOPATH: /home/runner/work/voigt/go
+          GOPATH: "/root/go"
         shell: go run {0}
         run: |
           package main
